--- a/.github/workflows/Build_CTRTool.yml
+++ b/.github/workflows/Build_CTRTool.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        dist: [ubuntu_x86_64, macos_x86_64, macos_arm64, ubuntu-24.04-arm]
+        dist: [ubuntu_x86_64, macos_x86_64, macos_arm64, ubuntu_arm64]
         prog: [ctrtool]
         include:
          - dist: ubuntu_x86_64
@@ -25,6 +25,9 @@ jobs:
            arch: x86_64
          - dist: macos_arm64
            os: macos-latest
+           arch: arm64
+         - dist: ubuntu_arm64
+           os: ubuntu-24.04-arm
            arch: arm64
     steps:
       - uses: actions/checkout@v4
